--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-horizontal-scrolling-menu": "^2.7.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-slideshow-image": "^3.7.0"
   },
   "devDependencies": {
     "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10"
+    "eslint-config-next": "12.0.10",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.5.1"
   }
 }
